syntax = "proto3";
service AccountService {
    rpc Addlogs(AuditRecord) returns (AuditResponce);
}
message AuditRecord {
    int Audittrailid =1;
    DateTime Performed_at=3;     
    int Performed_by =4;
    string Component_name =5;
    string Service_name =6;
    string Event_type  =7;
    string Event_status =8;
    string Message =9;
    int Sourceobject_id =10;
    int Targetobject_id =11;
    string Updated_data=12;    
}
message AuditResponce {
	string statuscode = 1;
	string message = 2;
}

message AuditRequest {
	string componentname = 1;
	string eventtype = 2;
	DateTime starttime = 2;
	DateTime endtime = 2;
}
